@@ -1,3 +1,7 @@
- - Deleted salt column from member table (salt for bcrypt is included in password column)
- - Updated login function in routes.py to correspond to change above
  - Hashed and salted the example data
+
+- Added additional method to database.py and a call to it in routes.new_booking
+  to update the user_details['booking stat'] value.
+
+- Added additional method to database.py and a call to it in routes.new_booking
+  to update the user_details['Homebay'] with a name rather than a number.
